// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker > Snapshots > matches custom color snapshot 1`] = `
<div
  class="color-picker "
>
  <button
    aria-label="Test color picker"
    class="button button--outline button--sm colorPicker__trigger"
  >
    <div
      class="colorPicker__colorSwatch"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette colorPicker__icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="colorPicker__label"
    >
      Brand Color
    </span>
  </button>
</div>
`;

exports[`ColorPicker > Snapshots > matches default snapshot 1`] = `
<div
  class="color-picker "
>
  <button
    aria-label="Test color picker"
    class="button button--outline button--sm colorPicker__trigger"
  >
    <div
      class="colorPicker__colorSwatch"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette colorPicker__icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="colorPicker__label"
    >
      Brand Color
    </span>
  </button>
</div>
`;

exports[`ColorPicker > Snapshots > matches disabled state snapshot 1`] = `
<div
  class="color-picker "
>
  <button
    aria-label="Test color picker"
    class="button button--outline button--sm colorPicker__trigger"
    disabled=""
  >
    <div
      class="colorPicker__colorSwatch"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette colorPicker__icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="colorPicker__label"
    >
      Brand Color
    </span>
  </button>
</div>
`;

exports[`ColorPicker > Snapshots > matches with className snapshot 1`] = `
<div
  class="color-picker custom-class"
>
  <button
    aria-label="Test color picker"
    class="button button--outline button--sm colorPicker__trigger"
  >
    <div
      class="colorPicker__colorSwatch"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette colorPicker__icon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="colorPicker__label"
    >
      Brand Color
    </span>
  </button>
</div>
`;
